force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (Grace)
2. ZR
3. SF- 725</description>
    <label>Auftrag.</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aufträge.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>