force-app/main/default/objects/Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. ZR
3.</description>
    <inlineHelpText>Only Opportunities that are linked to the Account of this Order, have the same Business Area as this Order and are in the Quotation- or Closed-Won-Stage can be connected.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Neu, Qualifizierungsphase, Geschlossen - Verloren</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.Business_Area__c</field>
            <operation>equals</operation>
            <valueField>$Source.Business_Area__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>