force-app/main/default/objects/Order__c/fields/Order_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Net_Amount__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Order Net Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>