force-app/main/default/objects/Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>