force-app/main/default/objects/Order__c/fields/Quote_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_SF_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant
2. ZR
3.</description>
    <label>Quote SF ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>