force-app/main/default/objects/Order__c/fields/Successful_Order__c.field-meta.xml
<CustomField>
    <fullName>Successful_Order__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper field to report on Quotes with successful Orders</description>
    <formula>IF((ISPICKVAL( Status__c ,&quot;ABG&quot;) || ISPICKVAL(Status__c, &quot;END&quot;)|| ISPICKVAL(Status__c, &quot;AUS&quot;)|| ISPICKVAL(Status__c, &quot;NEU&quot;)|| ISPICKVAL(Status__c, &quot;RUN&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Order</label>
    <type>Checkbox</type>
</CustomField>