force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Net_Amount__c</columns>
    <columns>Quote_SF_ID__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Aufträge</label>
</ListView>