force-app/main/default/objects/Order__c/listViews/My_Orders.listView-meta.xml
<ListView>
    <fullName>My_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Net_Amount__c</columns>
    <columns>Quote_SF_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Running_User_is_Account_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aufträge meiner Accounts</label>
</ListView>